[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/d_daok_edificios_strip25.png" type="Texture" id=1]
[ext_resource path="res://scenes/otros/Actividad.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/otros/Puerta.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Edificio.gd" type="Script" id=4]
[ext_resource path="res://sprites/d_daok_objetos_strip13.png" type="Texture" id=5]
[ext_resource path="res://sounds/a_compraa.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/a_poner.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.4999
height = 45.0001

[sub_resource type="CircleShape2D" id=2]
radius = 151.38

[node name="Edificio" type="Node2D" groups=["diamantino", "ediEdificio", "ediffice", "explotable", "porton"]]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Solido" type="Area2D" parent="."]
position = Vector2( 4, 0 )
rotation = 1.5708
collision_layer = 73
collision_mask = 0
input_pickable = false
monitoring = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Solido"]
position = Vector2( 2.5, 5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hulle" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2048
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Hulle"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Imagen" type="Node2D" parent="." groups=["imagen"]]
__meta__ = {
"_edit_lock_": true
}

[node name="Mineral" type="Sprite" parent="Imagen"]
visible = false
position = Vector2( -1, 36 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( -63, -112 )
hframes = 13
frame = 7
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Frente" type="Sprite" parent="Imagen"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
__meta__ = {
"_edit_lock_": true
}

[node name="Ventana1" type="Node2D" parent="Imagen" groups=["habitacion", "interior"]]
position = Vector2( 9, -93 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ventana2" type="Node2D" parent="Imagen" groups=["habitacion", "interior"]]
position = Vector2( -16, -88 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ventana3" type="Node2D" parent="Imagen" groups=["habitacion", "interior"]]
position = Vector2( 10, -49 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ventana4" type="Node2D" parent="Imagen" groups=["habitacion", "interior"]]
position = Vector2( -15, -45 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ventana5" type="Node2D" parent="Imagen" groups=["habitacion", "interior"]]
position = Vector2( -13, -2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Actividad" parent="Imagen" instance=ExtResource( 2 )]

[node name="Fin" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Fin1" type="Node2D" parent="Fin"]
position = Vector2( -24, -10 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin2" type="Node2D" parent="Fin"]
position = Vector2( 20, -10 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin3" type="Node2D" parent="Fin"]
position = Vector2( -21, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin4" type="Node2D" parent="Fin"]
position = Vector2( 19, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="Puerta" parent="." instance=ExtResource( 3 )]
position = Vector2( 25, 28 )

[node name="SacaAsalariado" type="Timer" parent="."]
one_shot = true

[node name="SonidoCompra" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 6 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[node name="SPoner" type="AudioStreamPlayer2D" parent="." groups=["sonido"]]
stream = ExtResource( 7 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[connection signal="tree_exiting" from="." to="." method="_on_Edificio_tree_exiting"]
[connection signal="area_entered" from="Hulle" to="." method="_on_Hulle_area_entered"]
[connection signal="area_exited" from="Hulle" to="." method="_on_Hulle_area_exited"]
[connection signal="toggled" from="Imagen/Actividad" to="." method="_on_Actividad_toggled"]
[connection signal="timeout" from="SacaAsalariado" to="." method="_on_SacaAsalariado_timeout"]
